--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,21 @@
 span {
     display: inline-block;
   }
-  /* span {
+span {
     display: inline-block;
-    background-color: lightblue;
-    padding: 5px;
-    border: 1px solid darkgray;
-  } */
-  /* 
-  #one {
-    background-color:lightblue;
-    width: 150px;
-    height: 200px;
+  } 
+   
+  
+div,span {
+    margin: 5px;
   }
   
-  #two {
-    background-color: cornflowerblue;
-    width: 200px;
-    height: 50px;
+#mini-layout img {
+    width:400px;
+    height: 160px;
+    object-fit: cover;
   }
-  
-  #three {
-    background-color: rgb(187, 189, 243);
-    width: 175px;
-    height: 150px;
-  } */
-  
-  /* div,
-  span {
-    margin: 1px;
+
+  body {
+    text-align: center;
   }
-  
-  span {
-    border: 1px solid #333;
-    
-    padding: 10px 15px;
-  }
-  
-  #pics span,
-  #text span {
-    padding: 25px 30px;
-  }
-  
-  #text span {
-    background-color: white;
-  } */
